# tona-ai

./: LICENSE.md  README.md  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  python-publish.yml  run-tests.yml
examples/: xor_neural_network.py
tona_ai/core/: __init__.py
