[metadata]
name = tona-ai
version = 0.0.5
description = A simple package to work with AI
long_description = file: README.md
long_description_content_type = text/markdown
author = Tonaxis
url = https://github.com/tonaxis/tona-ai
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.4
# install_requires =

[options.packages.find]
exclude =
    tests
